# computational-geometry-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: convex_hull_demo.cpp  polygon_triangulation_demo.cpp  sweep_line_demo.cpp
include/geom_algorithms/algorithms/: convex_hull.hpp  monotone_partition.hpp  polygon.hpp  sweep_line.hpp
include/geom_algorithms/visualization/: svg_writer.hpp
src/algorithms/: convex_hull.cpp  monotone_partition.cpp  sweep_line.cpp
src/visulazation/: svg_writer.cpp
src/visulization/: svg_writer.cpp
